--- a/styles.css
+++ b/styles.css
@@ -400,7 +400,7 @@ body {
 
 
     #profileImage:hover {
-        width: 310px;
+        width: 250px;
         box-shadow: -4px -4px 8px #17292b;
     }
 
@@ -495,6 +495,7 @@ body {
         height: 150vh;
         width: 100%;
         overflow: hidden;
+        padding-top: 50px;
     }
     .skillContainer {
         display: grid;
